# tiago_speech_recognition

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
config/: beam_search.yaml  common_asr_errors.yaml  diverse_beam_search.yaml
launch/: speech_recognition_node.launch  tiago_speech_recognition.launch
msg/: ASRHypothesis.msg  ASRNBestList.msg
src/tiago_speech_recognition_ros/: tiago_speech_node.py  whisper.py
